--- a/springMongoDB/pom.xml
+++ b/springMongoDB/pom.xml
@@ -41,6 +41,17 @@
 			<artifactId>hibernate-validator</artifactId>
 			 <version>6.0.13.Final</version>
 			</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.data</groupId>-->
+<!--			<artifactId>spring-data-rest-webmvc</artifactId>-->
+<!--			<version>3.3.3.RELEASE</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -54,6 +65,7 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
+
 					</excludes>
 				</configuration>
 			</plugin>
